--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Spencer Fielding # your name (or website title) here
 logo: "/images/Profile_Picture.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
+  I am a master's student at the University of Oklahoma in geospatial technologies. Below are some of the projects that I have worked on.
+  This is a work in progress and will be updated with new and exciting items as time goes on. 
   <br><br>
   <a href="https://www.linkedin.com/in/spencer-fielding/">View My LinkedIn Profile</a> 
   
