--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   This is a work in progress and will be updated with new and exciting items as time goes on. 
   <br><br>
   <a href="https://www.linkedin.com/in/spencer-fielding/">View My LinkedIn Profile</a> 
+    <br><br>
+  <a href="https://twitter.com/Fieldin1Spencer">Twitter</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
